# fluid-simulation

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json  webpack.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  bump.yml  deploy.yml
src/: glsl-to-rust-stringify.py  lib.rs  renderer.rs  shader_program.rs  shaders.rs  textures.rs
src/app/: index.html  index.ts  params.ts  pointer.ts  style.css  utils.ts
src/shaders/: advection.glsl  color_obstacle.glsl  copy.glsl  curl.glsl  divergence.glsl  gradient_subtract.glsl  jacobi_solver.glsl  obstacle.glsl  pressure_solver.glsl  splat.glsl  vertex.glsl  vorticity.glsl
