[package]
name = "fluid-simulation"
version = "3.1.2"
description = "A WebGL fluid simulation compiled to Wasm using Rust."
authors = ["wilzet"]
edition = "2021"
repository = "https://github.com/wilzet/fluid-simulation"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.67"
wasm-bindgen = "0.2.90"

[dependencies.web-sys]
version = "0.3.67"
features = [
    "Document",
    "Window",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "WebGlBuffer",
    "WebGlFramebuffer",
    "WebGlUniformLocation",
    "WebGlActiveInfo",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.40"
